--- a/src/components/Pages/ContactMe.css
+++ b/src/components/Pages/ContactMe.css
@@ -285,11 +285,15 @@ body {
     }
     
     .contact-left-column {
-        width: 100%;
-        height: 50%;
+        width: 100vw;
+        height: 50vh;
         display: flex;
         justify-content: center;
-        padding: 5%;
+        padding: 0;
+    }
+
+    .contact-img {
+        padding: 10%;
     }
 
     .contact-right-column {
@@ -303,8 +307,6 @@ body {
 
     .contact-title {
         font-size: 2rem;
-
-        
     }
     
     .contact-desc {
