--- a/src/components/Pages/Profile.css
+++ b/src/components/Pages/Profile.css
@@ -134,6 +134,10 @@ body {
     font-size: 2rem;
     padding: 10px;
 }
+.fa-crown {
+    font-size: 2rem;
+    padding: 10px;
+}
 
 .school-name {
     font-size: 1.5rem;
