--- a/src/components/Pages/Profile.css
+++ b/src/components/Pages/Profile.css
@@ -135,6 +135,12 @@ body {
     padding: 10px;
 }
 
+.fa-crown {
+    font-size: 2rem;
+    padding: 10px;
+}
+
+
 .school-name {
     font-size: 1.5rem;
     margin-left: 16px;
@@ -345,6 +351,10 @@ body {
     }
     
     .fa-book {
+        font-size: 1rem;
+    }
+    
+    .fa-crown {
         font-size: 1rem;
     }
 
